styles.css
@import url('https://fonts.googleapis.com/css?family=Arima+Madurai:300');

body {
    background-image: linear-gradient(to bottom, rgba(255, 168, 76, 0.6) 0%, rgba(255, 123, 13, 0.6) 100%), url('bamberg.jpg');
    background-size: cover; 
    background-repeat: no-repeat; 
    position: fixed; 
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1; 
    margin: 0;
    padding: 0;
    overflow: hidden; /* Prevent scrollbars */
    background-blend-mode: soft-light;
}

.text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 75%;
    left: 25%;
    transform: translate(0%, 0%); /* Center horizontally and vertically */
    padding: 1%; /* Adjust the padding as a percentage for responsive sizing */
    background-color: rgba(255, 255, 255, 0.7); /* Translucent white background */
    border-radius: 15px; /* Rounded corners */
    text-align: center; /* Center the text horizontally */
    color: black; /* Text color */
    max-width: 80%; /* Limit the maximum width of the container */
    box-sizing: border-box; /* Include padding in width calculation */
}


#timer {
    color: #ff5722;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

.bird {
    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells-new.svg);
    background-size: auto 100%;
    width: 88px;
    height: 125px;
    will-change: background-position;
    animation: fly-cycle 2s steps(10) infinite;
}

.bird--one {
    animation-duration: 1s;
    animation-delay: -0.5s;
}

.bird--two {
    animation-duration: 0.9s;
    animation-delay: -0.75s;
}

.bird--three {
    animation-duration: 1.25s;
    animation-delay: -0.25s;
}

.bird--four {
    animation-duration: 1.1s;
    animation-delay: -0.5s;
}

.bird-container {
    position: absolute;
    top: 20%;
    left: -10%;
    transform: scale(0) translateX(-10vw);
    will-change: transform;
    animation: fly-right-one 15s linear infinite;
}

.bird-container--one {
    animation-duration: 15s;
    animation-delay: 0;
}

.bird-container--two {
    animation-duration: 16s;
    animation-delay: 1s;
}

.bird-container--three {
    animation-duration: 14.6s;
    animation-delay: 9.5s;
}

.bird-container--four {
    animation-duration: 16s;
    animation-delay: 10.25s;
}


@keyframes fly-cycle {
    100% {
        background-position: -900px 0;
    }
}

@keyframes fly-right-one {
    0% {
        transform: scale(0.3) translateX(-10vw);
    }
    10% {
        transform: translateY(2vh) translateX(10vw) scale(0.4);
    }
    20% {
        transform: translateY(0vh) translateX(30vw) scale(0.5);
    }
    30% {
        transform: translateY(4vh) translateX(50vw) scale(0.6);
    }
    40% {
        transform: translateY(2vh) translateX(70vw) scale(0.6);
    }
    50% {
        transform: translateY(0vh) translateX(90vw) scale(0.6);
    }
    60% {
        transform: translateY(0vh) translateX(110vw) scale(0.6);
    }
    100% {
        transform: translateY(0vh) translateX(110vw) scale(0.6);
    }
}

@keyframes fly-right-two {
	
	0% {
		transform: translateY(-2vh) translateX(-10vw) scale(0.5);
	}
	
	10% {
		transform: translateY(0vh) translateX(10vw) scale(0.4);
	}
	
	20% {
		transform: translateY(-4vh) translateX(30vw) scale(0.6);
	}
	
	30% {
		transform: translateY(1vh) translateX(50vw) scale(0.45);
	}
	
	40% {
		transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
	}
	
	50% {
		transform: translateY(0vh) translateX(90vw) scale(0.45);
	}
	
	51% {
		transform: translateY(0vh) translateX(110vw) scale(0.45);
	}
	
	100% {
		transform: translateY(0vh) translateX(110vw) scale(0.45);
	}
	
}

